tests/baselines/reference/es3-oldStyleOctalLiteralTypes.errors.txt
error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
es3-oldStyleOctalLiteralTypes.ts(1,8): error TS1121: Octal literals are not allowed. Use the syntax '0o10'.
es3-oldStyleOctalLiteralTypes.ts(2,8): error TS1121: Octal literals are not allowed. Use the syntax '-0o20'.


!!! error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== es3-oldStyleOctalLiteralTypes.ts (2 errors) ====
    let x: 010;
           ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o10'.
    let y: -020;
           ~~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '-0o20'.
    